// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alias delete should delete an alias 1`] = `
Array [
  RowDataPacket {
    "alias_id": 2,
    "created_at": 2018-01-01T00:00:00.000Z,
    "created_by": 1,
    "description": "test",
    "enabled": false,
    "name": "test_2",
    "scene_id": 1,
    "updated_at": 2018-01-02T00:00:00.000Z,
  },
]
`;

exports[`Alias findAll should return all alias 1`] = `
Array [
  RowDataPacket {
    "aliasId": 1,
    "createdAt": 2018-01-01T00:00:00.000Z,
    "createdBy": 1,
    "description": "test",
    "enabled": true,
    "name": "test",
    "sceneId": 1,
    "updatedAt": 2018-01-02T00:00:00.000Z,
  },
  RowDataPacket {
    "aliasId": 2,
    "createdAt": 2018-01-01T00:00:00.000Z,
    "createdBy": 1,
    "description": "test",
    "enabled": false,
    "name": "test_2",
    "sceneId": 1,
    "updatedAt": 2018-01-02T00:00:00.000Z,
  },
]
`;

exports[`Alias findById should return only one alias 1`] = `
RowDataPacket {
  "aliasId": 1,
  "createdAt": 2018-01-01T00:00:00.000Z,
  "createdBy": 1,
  "description": "test",
  "enabled": true,
  "name": "test",
  "sceneId": 1,
  "updatedAt": 2018-01-02T00:00:00.000Z,
}
`;

exports[`Alias findByIdAndUpdate should update a alias 1`] = `
Object {
  "alias_id": 1,
  "created_at": Any<Date>,
  "created_by": 1,
  "description": "test",
  "enabled": true,
  "name": "updated",
  "scene_id": 1,
  "updated_at": Any<Date>,
}
`;

exports[`Alias save should save a new alias 1`] = `
Object {
  "alias_id": 3,
  "created_at": Any<Date>,
  "created_by": 1,
  "description": "test",
  "enabled": false,
  "name": "test_3",
  "scene_id": 1,
  "updated_at": Any<Date>,
}
`;
